--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "highcharts": "^6.2.0",
     "mongodb": "^3.1.10"
   },
   "devDependencies": {
